# find openv
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
  message(STATUS "OpenCV found")
  message(STATUS "OpenCV_INCLUDE_DIRS: ${OpenCV_INCLUDE_DIRS}")
  message(STATUS "OpenCV_LIBS: ${OpenCV_LIBS}")
  message(STATUS "OpenCV_VERSION: ${OpenCV_VERSION}")
else()
  message(FATAL_ERROR "OpenCV not found")
endif()
file(GLOB demo_dir *.cpp)
foreach(src ${demo_dir})
  get_filename_component(subdir_name ${src} NAME_WE)
  add_executable(${subdir_name} ${src})
  target_link_libraries(${subdir_name} ${OpenCV_LIBS})
  # set target bin directory bin/cuda set_target_properties( ${subdir_name}
  # PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/opencv)
endforeach()
